# lysa_ecs

./: CMakeLists.txt  README.md
src/bindings/lua/: LuaBindings.cpp  LuaBindings.ixx  ecs.lua
src/depends/flecs/: flecs.h  flecs.hpp  flecs_utils.hpp
src/ecs/: ECS.cpp  ECS.ixx  Flecs.ixx
src/ecs/components/: Components.cpp  Components.ixx  Transform.cpp  Transform.ixx
src/ecs/systems/: Systems.cpp  Systems.ixx  Transform.cpp
